# gtd_algos

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
gtd_algos/exp_configs/: minatar_qlambda.yaml  minatar_qrclambda.yaml  minatar_streamq_jax.yaml  minatar_streamq_pytorch.yaml  mujoco_gradient_ppo.yaml  mujoco_ppo.yaml
gtd_algos/src/: __init__.py
gtd_algos/src/agents/: ActorCritic.py  value_networks.py
gtd_algos/src/algorithms/: agent.py  gradient_ppo.py  ppo.py  q_lambda.py  qrc.py  streamq.py  streamq_pytorch.py
gtd_algos/src/configs/: Config.py  ExpConfig.py  utils.py
gtd_algos/src/envs/: make_gym_envs.py
gtd_algos/src/envs/gym_envs_wrappers/: __init__.py  normalization.py  store_episode_returns_and_lengths.py
gtd_algos/src/experiments/: main.py
gtd_algos/src/experiments/gym_exps/: gradient_ppo_main.py  ppo_main.py  q_lambda_main.py  qrc_main.py  streamq_main.py  streamq_pytorch.py
gtd_algos/src/nets/: MLP.py  layer_norm.py  sparse_init.py
gtd_algos/src/optimizers/: __init__.py  obgd_with_traces.py  sgd_with_traces.py
gtd_algos/src/tests/: ac_tests.py  mlp_test.py
gtd_algos/src/tree/: __init__.py  arithmetic.py  index.py  norms.py
gtd_algos/src/utils/: plotting_utils.py
